updated a few minor UI things and README

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="jumbotron">
             <div id="jumbotron_content">
                 <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
-                <p class="lead">Attic remediation from a local team you can trust</p>
+                <p class="lead">A local team you can trust</p>
                 <hr class="my-4">
                 <a class="btn btn-info btn-lg button" href="#" role="button">Contact Us</a>
                 <a class="btn btn-info btn-lg button" href="#" role="button">Get a Quote</a>
@@ -125,16 +125,6 @@
 
 
         </div>
-
-
-        <div class="section" id="help_center">
-
-            <div class="section_content">
-            <h2 class="bold">Commonly Asked Questions</h2>
-
-            </div>
-        </div>
-
 
         <div class="section" id="our_team">
 
