added icons to contact page

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,9 +18,9 @@
     
         <div class="float-child" id="location">
                 <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
-                <h3>Proud to serve the HRM</h3>
-
-            
+                        <p id = "top-icon"><i class="fas fa-fw fa-map-marker-alt"></i> Proud to serve the HRM</p>
+                        <p><i class="fas fa-fw fa-envelope"></i> emailaddress@fake.com</p>
+                        <p><i class="fas fa-fw fa-mobile"></i> (902) 000-0000</p>
         </div>
 
 
