updated/completed contact page design

--- a/contact.html
+++ b/contact.html
@@ -12,39 +12,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background: linear-gradient(white, transparent), url('pics/location2.jpg'); background-repeat: no-repeat;">
 
-
+<div id="contact_page">
     
         <div class="float-child" id="location">
-                <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
-                        <p id = "top-icon"><i class="fas fa-fw fa-map-marker-alt"></i> Proud to serve the HRM</p>
+               
+                        <p><i class="fas fa-fw fa-map-marker-alt"></i> Proud to serve the HRM</p>
                         <p><i class="fas fa-fw fa-envelope"></i> emailaddress@fake.com</p>
                         <p><i class="fas fa-fw fa-mobile"></i> (902) 000-0000</p>
         </div>
 
 
 		<div class="float-child" id="contact_form">
-                <form>
 
-                        <label for="name">Name</label><br>
-                        <input type="name"><br>
+                        <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
+                        <p>We'd love to hear from you!</p>
+                        <form>
 
-                        <label for="email">Email Address</label><br>
-                        <input type="email"><br>
+                                <input class="input" type="name" placeholder="Name"><br>
 
-                        <label for="text">Subject</label><br>
-                        <input type="text"><br>
+                                <input class="input" type="email" placeholder="Email Address"><br>
 
-                        <label for="text">Message</label><br>
-                        <input type="text"><br>
+                                <input class="input" type="text" placeholder="Subject"><br>
 
-                    <a class="btn btn-info btn-lg button" id="contact_button" href=# role="button">Submit</a>
-                </form>
+                                <textarea class="input" type="text" placeholder="What can we help you with?"></textarea><br>
+
+                        <a class="btn btn-info btn-lg button" id="contact_button" href=# role="button">Submit</a>
+                        </form>
 		</div>
 
 
-
+</div>
 
 
 
