--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <ul class="navbar-nav ml-auto" id="contact">
             <li class="nav-item">
-                <a class="nav-link" href="#">Get in Touch</a>
+                <a class="nav-link" href="contact.html">Get in Touch</a>
             </li>
           </ul>
         </div>
@@ -68,7 +68,7 @@
                 <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
                 <p class="lead">A local team you can trust</p>
                 <hr class="my-4">
-                <a class="btn btn-info btn-lg button" href="#" role="button">Contact Us</a>
+                <a class="btn btn-info btn-lg button" href="contact.html" role="button">Contact Us</a>
                 <a class="btn btn-info btn-lg button" href="#" role="button">Get a Quote</a>
                 <a class="btn btn-info btn-lg button" href="#" role="button">Learn More</a>
             </div>   
@@ -83,7 +83,7 @@
                     <p>Since opening we have become masters of our trade. Our commitment to exceptional services and incomparable customer care keep our community happy.</p>
                     <p>We never stop improving, and will continue to expand our offerings based on how we can best serve the HRM area.</p>
                     <p>Get in touch with us today to learn how J and A Attic Remediation can help you.</p>
-                    <a class="btn btn-info btn-lg button" href="#" role="button">Contact Us</a>
+                    <a class="btn btn-info btn-lg button" href="contact.html" role="button">Contact Us</a>
                     <a class="btn btn-info btn-lg button" href="#" role="button">Get a Quote</a>
                 </div>
 
