created quote page

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <p class="lead">A local team you can trust</p>
                 <hr class="my-4">
                 <a class="btn btn-info btn-lg button" href="contact.html" role="button">Contact Us</a>
-                <a class="btn btn-info btn-lg button" href="#" role="button">Get a Quote</a>
-                <a class="btn btn-info btn-lg button" href="#" role="button">Learn More</a>
+                <a class="btn btn-info btn-lg button" href="quote.html" role="button">Get a Quote</a>
+                <a class="btn btn-info btn-lg button" href="#business" role="button">Learn More</a>
             </div>   
         </div>
 
