added links and updated images

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
-<body style="background: linear-gradient(white, transparent), url('pics/location2.jpg'); background-repeat: no-repeat; background-size: cover;">
+<body style="background: url('pics/location2.jpg'); background-repeat: no-repeat; background-size: cover;">
 
 <div id="contact_page">
     
@@ -27,7 +27,7 @@
 		<div class="float-child contact_form">
 
                         <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
-                        <p>We'd love to hear from you!</p>
+                        <p>We'd love to hear from you! <a class="link" href="contact.html">Or click here to get a quote today.</a></p>
                         <form>
 
                                 <input class="input" type="name" placeholder="Name"><br>
