--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         
         <a class="navbar-brand logo" href="#">J<span style="color: #00e6e6">&</span>A</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,19 +35,19 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Business</a>
+                <a class="nav-link" href="#business">Business</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Services Consultation</a>
+                <a class="nav-link" href="quote.html">Services Consultation</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Help Center</a>
+                <a class="nav-link" href="#help_center">Help Center</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Our Team</a>
+                <a class="nav-link" href="#our_team">Our Team</a>
             </li>
           </ul>
 
@@ -127,6 +127,23 @@
 
         </div>
 
+        <div class="section" id="help_center">
+          <div class="section_content">
+            <h2 class="bold">Help Center</h2>
+
+            <p class="help_center_title">What causes attic mold?</p>
+            <p>The main cause of attic mold is poor air flow due to improper ventilation or no ventilation at all. We are experienced in providing the proper air flow in attics to ensure that no mold will form again.</p>
+
+            <p class="help_center_title">What are the dangers of mold?</p>
+            <p>Mold can cause a number of issues if you are exposed to it. Various allergic reactions such as dermatitis, sneezing, wheezing, sore throat, running nose, sinusitis, teary eyes and very serious nasal congestion can all be caused by mold exposure. Breathing mold spores may also result in bouts of asthma attacks, breathing difficulty and pneumonia in some cases. It can be extremely dangerous to the occupants in the house, and should be removed by a professional as quickly as possible.</p>
+
+
+          </div>
+
+
+        </div>
+
+
         <div class="section" id="our_team">
 
             <div class="section_content">
@@ -135,7 +152,7 @@
             <div class="card mb-3" style="max-width: 900px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="pics/headshot_1.jpg" class="card-img" alt="...">
+                    <img src="pics/jay.jpg" class="card-img" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -151,7 +168,7 @@
               <div class="card mb-3" style="max-width: 900px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="pics/headshot_2.jpg" class="card-img" alt="...">
+                    <img src="pics/alex.jpg" class="card-img" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
