--- a/quote.html
+++ b/quote.html
@@ -27,7 +27,7 @@
 		<div class="float-child contact_form">
 
                         <h1 class="display-4 logo">J<span style="color: #00e6e6">&</span>A Attic Remediation</h1>
-                        <p>Get a quote today!</p>
+                        <p>Get a quote today! <a class="link" href="contact.html">Or click here to send us a message.</a></p>
                         <form>
 
                                 <input class="input" type="name" placeholder="Name"><br>
