Finished design updates

--- a/index.html
+++ b/index.html
@@ -74,33 +74,34 @@
             </div>   
         </div>
 
-        <div class="section" id="business">
+        <div class="section dark_section" id="business">
 
             <div class="section_content">
-                <h2 class="bold">Why choose <span class="logo">J<span style="color: #00e6e6">&</span>A</span>?</h2>
+                <h2 class="dark_section_title">Why choose us?</h2>
 
                 <div class="has_border">
                     <p>Since opening we have become masters of our trade. Our commitment to exceptional services and incomparable customer care keep our community happy.</p>
                     <p>We never stop improving, and will continue to expand our offerings based on how we can best serve the HRM area.</p>
                     <p>Get in touch with us today to learn how J and A Attic Remediation can help you.</p>
                     <a class="btn btn-info btn-lg button" href="contact.html" role="button">Contact Us</a>
-                    <a class="btn btn-info btn-lg button" href="#" role="button">Get a Quote</a>
+                    <a class="btn btn-info btn-lg button" href="quote.html" role="button">Get a Quote</a>
                 </div>
 
-                <img src="pics/tear-out_2.jpg">
+           
+
             </div>
 
         </div>
 
 
-        <div class="section" id="services_consultation">
+        <div class="section" id="services">
 
             <div class="section_content">
-            <h2 class="bold">What do we do?</h2>
+            <h2 class="light_section_title">What do we do?</h2>
             
             <div class="card-deck">
                 <div class="card">
-                  <img src="pics/mold.jpg" class="card-img-top" alt="Image of attic mold.">
+                  <img src="pics/mold2.jpg" class="card-img-top" alt="Image of attic mold.">
                   <div class="card-body">
                     <h5 class="card-title bold">Mold Removal</h5>
                     <p class="card-text">This is the most commonly requested service, as attic mold is extremely common. This can be caused by ... </p>
@@ -114,7 +115,7 @@
                     </div>
                   </div>
                 <div class="card">
-                  <img src="pics/vent.jpg" class="card-img-top" alt="Image of air vent.">
+                  <img src="pics/vent2.jpg" class="card-img-top" alt="Image of air vent.">
                   <div class="card-body">
                     <h5 class="card-title bold">Ventilation</h5>
                     <p class="card-text">Most attic issues are caused by poor ventilation. Not only can we fix your mold and insulation issues, we can also install better ventilation to prevent these issues from recurring.</p>
@@ -127,9 +128,9 @@
 
         </div>
 
-        <div class="section" id="help_center">
+        <div class="section dark_section" id="help_center">
           <div class="section_content">
-            <h2 class="bold">Help Center</h2>
+            <h2 class="dark_section_title">Help Center</h2>
 
             <p class="help_center_title">What causes attic mold?</p>
             <p>The main cause of attic mold is poor air flow due to improper ventilation or no ventilation at all. We are experienced in providing the proper air flow in attics to ensure that no mold will form again.</p>
@@ -147,12 +148,12 @@
         <div class="section" id="our_team">
 
             <div class="section_content">
-            <h2 class="bold">Meet the Team</h2>
+            <h2 class="bold light_section_title">Meet the Team</h2>
 
             <div class="card mb-3" style="max-width: 900px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="pics/jay.jpg" class="card-img" alt="...">
+                    <img src="pics/jay.png" class="card-img" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -168,14 +169,14 @@
               <div class="card mb-3" style="max-width: 900px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="pics/alex.jpg" class="card-img" alt="...">
+                    <img src="pics/alex.png" class="card-img" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title bold">Alex Dupuis</h5>
                       <p class="card-text bold">Owner</p>
-                      <p class="card-text">After a thriving career in restoration Alex Dupuis decided to go his own way and open his business doing what he does best, attics. Alex has worked with large restoration companies such as Paul Davis and Service Master for many years and gained his experience through many in-class courses and on job training.</p>
-                      <p class="card-text">Certified as a water technician, asbestos abatement technician and a mold remediation specialist you can trust you’re in good hands. As a motivated, results-oriented business owner with extensive knowledge on remediation, competitive pricing and unmatched customer care, he’s made J&A Attic Remediation a business you can trust. </p>
+                      <p class="card-text">After a thriving career in restoration Alex Dupuis decided to go his own way and open his business doing what he does best, attics. Alex has worked with large restoration companies such as Paul Davis and Service Master and gained his experience through both in-class courses and on job training.</p>
+                      <p class="card-text">Certified as a water technician, asbestos abatement technician and a mold remediation specialist you can trust you’re in good hands.</p>
                     </div>
                   </div>
                 </div>
